--- a/POI_064.HTM
+++ b/POI_064.HTM
@@ -157,7 +157,7 @@
     };;                                              //:[08P]://
     //:====================================:#__ERROR__#:[08P]://
     //:#__MAX__#:[64P]:======================================://
-    let F_MAX =( i_val_001 , i_val_002 ){            //:[64P]://
+    let F_MAX =( i_val_001 , i_val_002 )=>{          //:[64P]://
                                                      //:[64P]://
         let o_val =( i_val_001 > i_val_002 ?    //// //:[64P]://
                      i_val_001 : i_val_002 );;;;;;;; //:[64P]://
